# NCQA

./: README.md
src/CUDA/nonconvex/: CMakeLists.txt  resources.cu  resources.h  test_prograd.cu
src/CUDA/nonconvex/Cyclic/: CMakeLists.txt  Makefile  cmake_install.cmake  cu_cr_solver.h
src/CUDA/nonconvex/utils/: Makefile  cmake_install.cmake  utils.cu  utils.h
src/CUDA/subproblem/: CMakeLists.txt  LargeRosenMain  Makefile  README.md  input.txt  output.txt  program.cu  run.sh
src/CUDA/subproblem/Cyclic/: Makefile  cmake_install.cmake  cu_cr_functors.cu  cu_cr_internal.h  cu_cr_solver.cu  cu_cr_solver.h
src/CUDA/subproblem/inputs/: input_10.txt  input_100.txt  input_1000.txt  input_10000.txt  input_4.txt
src/CUDA/subproblem/tests/: test_all.cu  test_cr.cu  test_cr_system.cu  test_functors.cu  test_serial_tSolver.cu
src/CUDA/subproblem/utils/: CMakeLists.txt  Makefile  cmake_install.cmake
src/CUDA/testfunc/: CMakeLists.txt  P.txt  PCR_Class.cu  PCR_Class.h  PCR_Device_Functions.cu  PCR_Device_functions.h  Test_Main.cu  cu_functors.cu  out.txt  run.sh  serial_tSolver.cu  serial_tSolver.h  times.txt  values.txt
src/CUDA/testfunc/Cyclic/: backup.h  cu_cr_solver.cu
src/benchmark/nonconvex/: newton_qp.m  outfun.m  quality_calculation.m  run_test_generized_innter_solver.m  run_test_generized_my_solver.m  run_test_robust_innter_solver.m  run_test_robust_my_solver.m  time_calculation.m  time_calculation_robust.m
src/benchmark/nonconvex/IPM/: dualgap_interior_point.m  dualgap_t_interior_point.m  interior_point_qp.m  interior_point_qp2.m
src/benchmark/nonconvex/barriar function/: my_barriar.m  my_barriar_risk_parity.m  my_barriar_risk_parity_c_0.m  my_barriar_risk_parity_robust.m  non_convex_qp.m  (+3 more)
src/benchmark/testfunc/: rosentest.m  solve_rosenbrock.m  solve_rosenbrockgpu.m  testRosenbrock.m
(+24 files in other folders)
